--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,11 @@ ul {
   padding: 20vh calc(30vw - 100px);
 }
 
+.leftcolumn-link:link {
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+}
+
 .center-vertical {
   display: flex;
   flex-direction: column;
